--- a/StockBoardConnect/Views/_ViewImports.cshtml
+++ b/StockBoardConnect/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StockBoardConnect
 @using StockBoardConnect.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using React.AspNet
