とりあえずプッシュ

--- a/StockBoardConnect/Views/_ViewImports.cshtml
+++ b/StockBoardConnect/Views/_ViewImports.cshtml
@@ -2,3 +2,14 @@
 @using StockBoardConnect.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using React.AspNet
+@using React.RenderFunctions
+
+@{
+    var styledComponentsFunctions = new StyledComponentsFunctions();
+}
+
+@Html.React("RootComponent", new { exampleProp = "a" }, renderFunctions: new ChainedRenderFunctions(styledComponentsFunctions))
+
+@{
+    ViewBag.ServerStyles = styledComponentsFunctions.RenderedStyles;
+}
