--- a/StockBoardConnect/Views/Home/Test.cshtml
+++ b/StockBoardConnect/Views/Home/Test.cshtml
@@ -4,14 +4,16 @@
 <html>
 <head>
     <title>Hello React</title>
+    @Html.Raw(ViewBag.ServerStyles)
 </head>
 <body>
     @Html.React("Tutorial", new
-    {
-        props = "test",
-       })
+{
+    props = "test",
+});
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
+    @*@Html.ReactInitJavaScript()*@
 </body>
 </html>
