--- a/StockBoardConnect/Views/Shared/_Layout.cshtml
+++ b/StockBoardConnect/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - StockBoardConnect</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     @Html.Raw(ViewBag.ServerStyles)
 </head>
 <body>
