--- a/StockBoardConnect/Views/Shared/_Layout.cshtml
+++ b/StockBoardConnect/Views/Shared/_Layout.cshtml
@@ -48,5 +48,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @Html.ReactGetScriptPaths()
+    @Html.ReactInitJavaScript()
 </body>
 </html>
