--- a/StockBoardConnect/Views/Board/Board.cshtml
+++ b/StockBoardConnect/Views/Board/Board.cshtml
@@ -1,12 +1,10 @@
 ﻿@model int
 @{
     var styledComponentsFunctions = new StyledComponentsFunctions();
-    var helmetFunctions = new ReactHelmetFunctions();
 }
-@Html.React("Components.Board", new { id = Model }, renderFunctions: new ChainedRenderFunctions(styledComponentsFunctions,helmetFunctions))
+@Html.React("Contents.Components.Board", new { id = Model }, renderFunctions: new ChainedRenderFunctions(styledComponentsFunctions))
 
 @{
     ViewBag.ServerStyles = styledComponentsFunctions.RenderedStyles;
-    ViewBag.HelmetStyle = helmetFunctions.RenderedHelmet?.GetValueOrDefault("style");
     ViewBag.Title = "Board";
 }
