--- a/StockBoardConnect/Views/Shared/_Layout.cshtml
+++ b/StockBoardConnect/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
     </environment>
 </head>
 <body>
-    @RenderBody()
+    <main>
+        @RenderBody()
+    </main>
     @await RenderSectionAsync("Scripts", required: false)
     @Html.ReactGetScriptPaths()
     @Html.ReactInitJavaScript()
