ログインできるようにした。

--- a/StockBoardConnect/Views/_ViewImports.cshtml
+++ b/StockBoardConnect/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using StockBoardConnect
 @using StockBoardConnect.Models
 @using StockBoardConnect.Models.AccountViewModels
+@using StockBoardConnect.Data
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using React.AspNet
