--- a/StockBoardConnect/Views/_ViewImports.cshtml
+++ b/StockBoardConnect/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using React.AspNet
 @using React.RenderFunctions
+@using System.Web
+@using Microsoft.AspNetCore.Antiforgery;
 
