アカウント登録でエラーメッセージを登録できるようにした

--- a/StockBoardConnect/Views/_ViewImports.cshtml
+++ b/StockBoardConnect/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using React.RenderFunctions
 @using System.Web
 @using Microsoft.AspNetCore.Antiforgery;
+@using Newtonsoft.Json
 @inject IAntiforgery Antiforgery
 
