--- a/StockBoardConnect/Views/Account/Register.cshtml
+++ b/StockBoardConnect/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
 ﻿@model RegisterViewModel
 @{ ViewData["Title"] = "Register"; }
 
-@Html.React("Contents.Components.AccountRegister", new { antiForgeryToken = Antiforgery.GetAndStoreTokens(Context).RequestToken })
+@Html.React("Contents.Components.AccountRegister", new { antiForgeryToken = Antiforgery.GetAndStoreTokens(Context).RequestToken, vm = JsonConvert.SerializeObject(Model) })
