--- a/StockBoardConnect/Views/Home/Index.cshtml
+++ b/StockBoardConnect/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model string
+@Html.React("Contents.Components.HomeIndex", new { id = Model })
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@{
+    ViewBag.Title = "ホーム";
+}
