ユーザー詳細画面作成した。

--- a/StockBoardConnect/Views/User/Details.cshtml
+++ b/StockBoardConnect/Views/User/Details.cshtml
@@ -2,5 +2,5 @@
 @Html.React("Contents.Components.UserDetails", new { id = Model })
 
 @{
-    ViewBag.Title = "詳細";
+    ViewBag.Title = "ユーザー詳細";
 }
